--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fullstack Application</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>RepoRanger</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+  </head>
+  <body>
     <div id="root"></div>
-</body>
+  </body>
 </html>
